@@ -17,6 +17,12 @@ flash.desktop.Clipboard.formats : Array<ClipboardFormats>;
 flash.desktop.Clipboard.$format : ClipboardFormats;
 flash.desktop.Clipboard.$transferMode : ClipboardTransferMode;
 
+enum flash.desktop.ClipboardFormats;
+enum flash.desktop.ClipboardTransferMode;
+
+enum flash.display.PixelSnapping;
+enum flash.display.BlendMode;
+
 @:require(flash10) flash.desktop.Clipboard
 @:require(flash10) flash.desktop.ClipboardFormats
 @:require(flash10) flash.desktop.ClipboardTransferMode
@@ -60,6 +66,22 @@ flash.display.DisplayObjectContainer.getObjectsUnderPoint : Array<DisplayObject>
 @:require(flash10_1) flash.display.Sprite.stopTouchDrag;
 
 @:require(flash10_1) flash.display.Stage.wmodeGPU;
+
+enum flash.display.GradientType;
+enum flash.display.CapsStyle;
+enum flash.display.JointStyle;
+enum flash.display.GraphicsPathWinding;
+enum flash.display.TriangleCulling;
+enum flash.display.InterpolationMethod;
+enum flash.display.LineScaleMode;
+enum flash.display.ShaderParameterType;
+enum flash.display.ShaderPrecision;
+enum flash.display.SpreadMethod;
+enum flash.display.StageAlign;
+enum flash.display.StageDisplayState;
+enum flash.display.StageQuality;
+enum flash.display.StageScaleMode;
+-flash.display.SWFVersion.new
 
 flash.display.Graphics.$type : GradientType;
 flash.display.Graphics.$colors : Array<UInt>;
@@ -109,10 +131,13 @@ flash.display.GraphicsTrianglePath.$culling : TriangleCulling;
 
 @:require(flash10) flash.display.Loader.unloadAndStop
 
+enum flash.display.ActionScriptVersion;
+enum flash.display.ColorCorrection;
+enum flash.display.ColorCorrectionSupport;
+
 -flash.display.LoaderInfo.new
 flash.display.LoaderInfo.parameters : Dynamic<String>;
 flash.display.LoaderInfo.actionScriptVersion : ActionScriptVersion;
-flash.display.LoaderInfo.swfVersion : SWFVersion;
 
 -flash.display.MorphShape.new
 
@@ -173,7 +198,11 @@ flash.display.Stage.displayState : StageDisplayState;
 flash.events.IEventDispatcher.$listener : Dynamic -> Void;
 flash.events.EventDispatcher.$listener : Dynamic -> Void;
 
+enum flash.events.EventPhase;
+enum flash.events.GesturePhase;
+
 flash.events.Event.eventPhase : EventPhase;
+
 flash.events.KeyboardEvent.keyLocation : flash.ui.KeyLocation;
 flash.events.KeyboardEvent.$keyLocationValue : flash.ui.KeyLocation;
 flash.events.KeyboardEvent.$keyLocation : flash.ui.KeyLocation;
@@ -191,6 +220,9 @@ flash.events.KeyboardEvent.$keyLocation : flash.ui.KeyLocation;
 
 -flash.external.ExternalInterface.new
 
+enum flash.filters.BitmapFilterType;
+enum flash.filters.DisplacementMapFilterMode;
+
 flash.filters.BevelFilter.type : BitmapFilterType;
 flash.filters.BevelFilter.$type : BitmapFilterType;
 
@@ -199,6 +231,8 @@ flash.filters.DisplacementMapFilter.$mode : DisplacementMapFilterMode;
 
 flash.filters.GradientGlowFilter.type : BitmapFilterType;
 flash.filters.GradientGlowFilter.$type : BitmapFilterType;
+
+enum flash.geom.Orientation3D;
 
 flash.geom.Matrix3D.$orientationStyle : Orientation3D;
 
@@ -214,6 +248,8 @@ flash.geom.Matrix3D.$orientationStyle : Orientation3D;
 
 @:require(flash10_1) static flash.media.Camera.isSupported;
 @:require(flash10_1) static flash.media.Camera._scanHardware;
+
+enum flash.media.SoundCodec;
 
 flash.media.Microphone.codec : SoundCodec;
 
@@ -242,20 +278,10 @@ flash.net.FileReference.$typeFilter : Array<FileFilter>;
 flash.net.FileReferenceList.fileList : Array<FileReference>;
 flash.net.FileReferenceList.$typeFilter : Array<FileFilter>;
 
-flash.net.NetStreamPlayOptions.transition : NetStreamPlayTransitions;
-
 @:require(flash10_1) flash.net.GroupSpecifier;
 @:require(flash10_1) flash.net.NetGroup;
 @:require(flash10_1) flash.net.NetGroupInfo;
 @:require(flash10_1) flash.net.NetStreamMulticastInfo;
-flash.net.NetGroup.receiveMode : NetGroupReceiveMode;
-flash.net.NetGroup.replicationStrategy : NetGroupReplicationStrategy;
-flash.net.NetGroup.$sendMode : NetGroupSendMode;
-flash.net.NetGroup.sendToAllNeighbors : NetGroupSendResult;
-flash.net.NetGroup.sendToNearest : NetGroupSendResult;
-flash.net.NetGroup.sendToNeighbor : NetGroupSendResult;
-
-flash.net.NetStream.$netStreamAppendBytesAction : NetStreamAppendBytesAction;
 
 @:require(flash10) flash.net.NetConnection.farID;
 @:require(flash10) flash.net.NetConnection.farNonce;
@@ -312,11 +338,14 @@ flash.net.NetStream.$netStreamAppendBytesAction : NetStreamAppendBytesAction;
 -flash.net.ObjectEncoding.new
 -flash.net.URLRequestMethod.new
 
+enum flash.net.URLLoaderDataFormat;
+
 flash.net.Socket.endian : flash.utils.Endian;
 flash.net.URLLoader.dataFormat : URLLoaderDataFormat;
 flash.net.URLRequest.requestHeaders : Array<URLRequestHeader>;
-flash.net.SharedObject.flush : SharedObjectFlushStatus;
 flash.net.URLStream.endian : flash.utils.Endian;
+
+enum flash.printing.PrintJobOrientation;
 
 flash.printing.PrintJob.orientation : PrintJobOrientation;
 @:require(flash10_1) static flash.printing.PrintJob.isSupported;
@@ -332,6 +361,9 @@ flash.sampler.Sample.stack : Array<StackFrame>;
 -flash.system.Capabilities.new
 -flash.system.IME.new
 -flash.system.FSCommand.new
+
+enum flash.system.IMEConversionMode;
+
 static flash.system.IME.conversionMode : IMEConversionMode
 
 @:require(flash10) flash.system.ApplicationDomain.domainMemory;
@@ -345,6 +377,8 @@ static flash.system.IME.conversionMode : IMEConversionMode
 @:require(flash10_1) static flash.system.Capabilities.supports64BitProcesses;
 @:require(flash10_1) static flash.system.Capabilities.touchscreenType;
 static flash.system.Capabilities.touchscreenType : TouchscreenType;
+
+enum flash.system.TouchscreenType;
 
 
 @:require(flash10_1) static flash.system.IME.isSupported;
@@ -370,11 +404,24 @@ static flash.system.Capabilities.touchscreenType : TouchscreenType;
 @:require(flash10_1) static flash.system.System.disposeXML;
 @:require(flash10_1) static flash.system.System.nativeConstructionOnly;
 
+enum flash.system.SecurityPanel;
+
 -flash.system.Security.new
 flash.system.Security.$panel : SecurityPanel
 -flash.system.SecurityDomain.new
 -flash.system.System.new
 flash.system.SystemUpdater.$typer : SystemAdapterType;
+
+enum flash.text.AntiAliasType;
+enum flash.text.GridFitType;
+enum flash.text.FontStyle;
+enum flash.text.FontType;
+enum flash.text.TextDisplayMode;
+enum flash.text.TextFieldType;
+enum flash.text.TextFieldAutoSize;
+enum flash.text.TextFormatAlign;
+enum flash.text.TextFormatDisplay;
+enum flash.text.TextColorType;
 
 flash.text.Font.fontStyle : FontStyle;
 flash.text.Font.fontType : FontType;
@@ -434,6 +481,26 @@ flash.text.engine.EastAsianJustifier.justificationStyle : JustificationStyle;
 flash.text.engine.EastAsianJustifier.$justificationStyle : JustificationStyle;
 flash.text.engine.EastAsianJustifier.$lineJustification : LineJustification;
 
+enum flash.text.engine.BreakOpportunity;
+enum flash.text.engine.CFFHinting;
+enum flash.text.engine.DigitCase;
+enum flash.text.engine.DigitWidth;
+enum flash.text.engine.FontLookup;
+enum flash.text.engine.FontPosture;
+enum flash.text.engine.FontWeight;
+enum flash.text.engine.JustificationStyle;
+enum flash.text.engine.Kerning;
+enum flash.text.engine.LigatureLevel;
+enum flash.text.engine.LineJustification;
+enum flash.text.engine.RenderingMode;
+enum flash.text.engine.TabAlignment;
+enum flash.text.engine.TextBaseline;
+enum flash.text.engine.TextLineCreationResult;
+enum flash.text.engine.TextLineValidity;
+enum flash.text.engine.TextRotation;
+enum flash.text.engine.TypographicCase;
+
+
 flash.text.engine.ElementFormat.alignmentBaseline : TextBaseline;
 flash.text.engine.ElementFormat.breakOpportunity : BreakOpportunity;
 flash.text.engine.ElementFormat.digitCase : DigitCase;
@@ -492,6 +559,8 @@ flash.text.engine.TextLine.baseline : TextBaseline;
 
 -flash.ui.Keyboard.new
 -flash.ui.Mouse.new
+
+enum flash.ui.MultitouchInputMode;
 
 -flash.ui.Multitouch.new
 flash.ui.Multitouch.inputMode : MultitouchInputMode;
@@ -559,6 +628,9 @@ static flash.ui.Mouse.cursor : MouseCursor;
 @:require(flash10_1) static flash.ui.Keyboard.SLASH;
 @:require(flash10_1) static flash.ui.Keyboard.hasVirtualKeyboard;
 @:require(flash10_1) static flash.ui.Keyboard.physicalKeyboardType;
+
+enum flash.ui.KeyboardType;
+enum flash.ui.KeyLocation;
 
 static flash.ui.Keyboard.physicalKeyboardType : KeyboardType;
 
@@ -714,6 +786,11 @@ static flash.ui.Multitouch.inputMode : MultitouchInputMode;
 
 @:require(flash10_1) static flash.ui.Mouse.supportsCursor;
 
+enum flash.utils.Endian;
+
+@:native("RegExp") flash.utils.RegExp;
+-static flash.utils.RegExp.length;
+
 flash.utils.ObjectInput.endian : Endian;
 flash.utils.ObjectOutput.endian : Endian;
 flash.utils.ByteArray.endian : Endian;
@@ -734,6 +811,8 @@ flash.utils.IDataOutput.endian : Endian;
 -flash.utils.QName.valueOf
 -static flash.utils.QName.length
 
+enum flash.xml.XMLNodeType;
+
 flash.xml.XMLNode.nodeType : XMLNodeType;
 flash.xml.XMLNode.$type : XMLNodeType;
 
@@ -743,6 +822,8 @@ flash.xml.XMLList.namespace : flash.utils.Namespace;
 flash.xml.XMLList.parent : XML;
 flash.xml.XMLTag.type : XMLNodeType;
 
+
+enum flash.system.SystemUpdaterType;
 
 @:require(flash10_1) flash.system.SystemUpdater;
 flash.system.SystemUpdater.$type : SystemUpdaterType;
@@ -757,6 +838,13 @@ flash.system.SystemUpdater.$type : SystemUpdaterType;
 @:require(flash10_1) flash.globalization.StringTools;
 @:require(flash10_1) flash.globalization.NumberFormatter;
 @:require(flash10_1) flash.globalization.NumberParseResult;
+
+enum flash.globalization.CollatorMode;
+enum flash.globalization.DateTimeNameContext;
+enum flash.globalization.DateTimeNameStyle;
+enum flash.globalization.DateTimeStyle;
+enum flash.globalization.LastOperationStatus;
+enum flash.globalization.NationalDigitsType;
 
 flash.globalization.Collator.lastOperationStatus : LastOperationStatus;
 flash.globalization.Collator.$initialMode : CollatorMode;
@@ -827,9 +915,16 @@ flash.globalization.StringTools.lastOperationStatus : LastOperationStatus;
 
 @:require(flash10_2) static flash.ui.Mouse.registerCursor;
 
+enum flash.media.MicrophoneEnhancedMode;
+
 flash.media.MicrophoneEnhancedOptions.mode : MicrophoneEnhancedMode;
 
+enum flash.display.FocusDirection;
+
+
 // FLASH 11 FEATURES
+
+-flash.automation.Configuration.new
 
 @:require(flash11) flash.display.DisplayObjectContainer.removeChildren;
 @:require(flash11) flash.display.Graphics.cubicCurveTo;
@@ -842,9 +937,21 @@ flash.media.MicrophoneEnhancedOptions.mode : MicrophoneEnhancedMode;
 @:require(flash11) flash.display.MovieClip.isPlaying;
 
 @:require(flash11) flash.display.Stage.allowsFullScreen;
+@:require(flash11) flash.display.Stage.displayContextInfo;
 @:require(flash11) flash.display.Stage.softKeyboardRect;
 @:require(flash11) flash.display.Stage.stage3Ds;
 @:require(flash11) flash.display.Stage3D;
+
+-flash.display.Stage.constructor;
+-flash.display.Stage.hasOwnProperty;
+-flash.display.Stage.isPrototypeOf;
+-flash.display.Stage.propertyIsEnumerable;
+-flash.display.Stage.setPropertyIsEnumerable;
+-flash.display.Stage.toLocaleString;
+-flash.display.Stage.valueOf;
+
+enum flash.display3D.Context3DBlendFactor;
+enum flash.display3D.;
 
 @:require(flash11) static flash.events.Event.CONTEXT3D_CREATE;
 @:require(flash11) static flash.events.Event.TEXT_INTERACTION_MODE_CHANGE;
@@ -877,10 +984,21 @@ flash.media.MicrophoneEnhancedOptions.mode : MicrophoneEnhancedMode;
 @:require(flash11) flash.geom.Vector3D.copyFrom;
 @:require(flash11) flash.geom.Vector3D.setTo;
 
-@:require(flash11) flash.media.Sound.loadMP3FromByteArray;
+
+
+@:require(flash11) flash.media.Sound.loadCompressedDataFromByteArray;
 @:require(flash11) flash.media.Sound.loadPCMFromByteArray;
 
 @:require(flash11) flash.net.Socket.bytesPending;
+
+-flash.display3D.Context3DClearMask.new;
+enum flash.display3D.Context3DCompareMode;
+enum flash.display3D.Context3DProgramType;
+enum flash.display3D.Context3DRenderMode;
+enum flash.display3D.Context3DStencilAction;
+enum flash.display3D.Context3DTextureFormat;
+enum flash.display3D.Context3DTriangleFace;
+enum flash.display3D.Context3DVertexBufferFormat;
 
 -flash.display.Stage3D.new;
 -flash.display3D.Context3D.new;
@@ -903,3 +1021,44 @@ flash.display3D.Context3D.$actionOnBothPass : Context3DStencilAction;
 flash.display3D.Context3D.$actionOnDepthFail : Context3DStencilAction;
 flash.display3D.Context3D.$actionOnDepthPassStencilFail : Context3DStencilAction;
 flash.display3D.Context3D.$setVertexBufferAt__format : Context3DVertexBufferFormat;
+
+@:require(flash11) flash.net.NetStream.useHardwareDecoder;
+@:require(flash11) flash.net.NetStream.videoStreamSettings;
+
+@:require(flash11) flash.net.SecureSocket;
+@:require(flash11) flash.net.NetMonitor;
+
+@:require(flash11) static flash.system.Capabilities.hasMultiChannelAudio;
+
+@:require(flash11) flash.system.LoaderContext.imageDecodingPolicy;
+@:require(flash11) flash.system.LoaderContext.parameters;
+@:require(flash11) flash.system.LoaderContext.requestedContentParent;
+
+enum flash.system.ImageDecodingPolicy;
+
+flash.system.LoaderContext.imageDecodingPolicy : ImageDecodingPolicy;
+
+@:require(flash11) static flash.system.Security.pageDomain;
+
+@:require(flash11) static flash.system.System.processCPUUsage;
+@:require(flash11) static flash.system.System.pauseForGCIfCollectionImminent;
+
+@:require(flash11) static flash.ui.Mouse.supportsNativeCursor;
+@:require(flash11) static flash.ui.Mouse.unregisterCursor;
+
+-flash.ui.MouseCursor.new;
+
+@:require(flash11) flash.utils.CompressionAlgorithm;
+enum flash.utils.CompressionAlgorithm;
+
+@:require(flash11) flash.xml.XML.toJSON;
+@:require(flash11) flash.xml.XMLList.toJSON;
+
+flash.utils.ByteArray.$algorithm : CompressionAlgorithm;
+
+@:require(flash11) flash.text.TextField.textInteractionMode;
+
+enum flash.text.TextInteractionMode;
+
+flash.text.TextField.textInteractionMode : TextInteractionMode;
+
